Added unit testing and custom type converters for argument parsing